--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to FreeInfinity
 on:
   push:
     branches:
-      - yash_test # Change this to your desired branch
+      - main # Change this to your desired branch
 
 jobs:
   deploy:
