--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Deploy to FreeInfinity
       run: |
         # Copy static files to deploy directory
-        cp -r ./BMSCE_Companion/* ./deploy/
+        cp -r ./* ./deploy/
         
         # Change to the deploy directory
         cd ./deploy/
