--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
     
     - name: Deploy to FreeInfinity
       run: |
-        # List all image files in the 'image' directory and upload each using curl
-        for file in ./BMSCE_Companion/image/*; do
+        # Change to the 'image' directory
+        cd ./BMSCE_Companion/image
+        # Loop through each image file and upload it using curl
+        for file in *; do
           curl -T "$file" -u $if0_34806115:$NmjOePTLzNR ftp://ftpupload.net/public_html/
         done
